update module user