@@ -14,9 +14,13 @@ public class CorsConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3000"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Allowed methods
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept"));
+        // Cac cong duoc ket noi toi
+        configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:4173", "http://localhost:5173", "http://localhost:4175"));
+        // Cac method nao duoc ket noi
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        // phan header duoc phep gui len
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "x-no-retry"));
+        // co gui kem cookie hay khong
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
             // How long the response from a pre-flight request can be cached by clients
